Updated user and currency paths to operate under HATEOAS, updated API documentation to reflect this
